--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,10 @@
-<p>graficas1 works!</p>
+<div class="row">
+    <div class="col-6" *ngFor="let item of graficos; let i = index;">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">{{item.leyenda}}</h4>
+                <app-grafica [chartData]="item.data" [chartLabels]="item.labels" [chartType]="item.type"></app-grafica>
+            </div>
+        </div>
+    </div>
+</div>
