--- a/src/app/components/incrementador/incrementador.component.html
+++ b/src/app/components/incrementador/incrementador.component.html
@@ -3,7 +3,7 @@
     <span class="input-group-btn">
         <button class="btn btn-outline-primary" type="button" (click)="cambiarValor(-5)" [disabled]="porcentaje === 0"><i class="mdi mdi-minus"></i></button>
     </span>
-    <input #txtProgress type="number" class="form-control" name="porcentaje" [(ngModel)]="porcentaje" (ngModelChange)="inputChanged($event)" min="1" max="100">
+    <input #txtProgress type="number" class="form-control" name="porcentaje" [(ngModel)]="porcentaje" min="1" max="100">
     <span class="input-group-btn">
         <button class="btn btn-outline-primary" type="button" (click)="cambiarValor(+5)" [disabled]="porcentaje === 100"><i class="mdi mdi-plus"></i></button>
     </span>
