--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -4,11 +4,11 @@
             <div class="card-body">
                 <h4 class="card-title">Barra de progreso</h4>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="porcentaje1" aria-valuemin="0" aria-valuemax="100" [style.width]="porcentaje1 + '%'"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="porcentaje1" aria-valuemin="0" aria-valuemax="100" [style.width]="getPorcentaje(porcentaje1)"></div>
                 </div>
                 <br>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.ariaValuenow]="porcentaje2" aria-valuemin="0" aria-valuemax="100" [style.width]="porcentaje2 + '%'"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.ariaValuenow]="porcentaje2" aria-valuemin="0" aria-valuemax="100" [style.width]="getPorcentaje(porcentaje2)"></div>
                 </div>
             </div>
         </div>
@@ -18,14 +18,14 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <app-incrementador (cambioValor)="actualizar($event, 'porcentaje1')" leyenda="Progress azul" [porcentaje]="porcentaje1"></app-incrementador>
+                <app-incrementador (nuevoValor)="actualizar($event, 'porcentaje1')" leyenda="Progress azul" [porcentaje]="porcentaje1"></app-incrementador>
             </div>
         </div>
     </div>
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <app-incrementador (cambioValor)="actualizar($event, 'porcentaje2')" leyenda="Progress verde" [porcentaje]="porcentaje2"></app-incrementador>
+                <app-incrementador (nuevoValor)="actualizar($event, 'porcentaje2')" leyenda="Progress verde" [porcentaje]="porcentaje2"></app-incrementador>
             </div>
         </div>
     </div>
