--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -25,7 +25,11 @@
                         <span class="hide-menu">{{item.titulo}}<span class="label label-rouded label-themecolor pull-right">{{item.submenu.length}}</span></span>
                     </a>
                     <ul aria-expanded="false" class="collapse" *ngFor="let subitem of item.submenu">
-                        <li><a routerLinkActive="active" [routerLink]="[subitem.url]">{{subitem.titulo}}</a></li>
+                        <li><a
+                          routerLinkActive="active"
+                          [routerLink]="[subitem.url]"
+                          [routerLinkActiveOptions]="{exact : true}"
+                          >{{subitem.titulo}}</a></li>
                     </ul>
                 </li>
                 <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-bullseye"></i><span class="hide-menu">Apps</span></a>
